@@ -1,9 +1,6 @@
 Key,File,Type,UsedInMainMenu,NoTranslate,english,Context / Alternate Text,german,latam,french,italian,japanese,koreana,polish,brazilian,russian,turkish,schinese,tchinese,spanish
 loadingZZTongPrefabs,UI,Loading Screen,x,,Thank you for using the ZZTong-Prefabs modlet.,,Vielen Dank, dass Sie das ZZTong-Prefabs-Modlet verwenden.,Obrigado por usar o modlet ZZTong-Prefab.,Merci d'avoir utilisé le modèle ZZTong-Prefab.,Grazie per aver utilizzato il modlet ZZTong-Prefab.,ZZTong-Prefab modlet をご利用いただきありがとうございます。,ZZTong-Prefab 모드렛을 사용해 주셔서 감사합니다.,Dziękujemy za skorzystanie z modletu ZZTong-Prefab.,Obrigado por usar o modlet ZZTong-Prefab.,Благодарим вас за использование модуля ZZTong-Prefab.,ZZTong-Prefabrik modelini kullandığınız için teşekkür ederiz.,感谢您使用 ZZTong-Prefab 模块。,感謝您使用 ZZTong-Prefab 模塊。,Gracias por usar el modelo ZZTong-Prefab.
 loadingZZTongPrefabs_title,UI,Loading Screen,x,,Thank You,,Danke schön,Obrigado,Merci,Grazie,どうもありがとうございます,매우 감사합니다,Dziękuję Ci,Obrigado,благодарю вас,Teşekkürler,谢谢你,謝謝你,Gracias
-qt_zztong,items,Quest - Treasure Map,,,Bruce's Treasure Map,,Bruces Schatzkarte,Mapa del tesoro de Bruce,La carte au trésor de Bruce,Mappa del tesoro di Bruce,ブルースの宝の地図,브루스의 보물 지도,Mapa skarbów Bruce'a,Mapa do Tesouro do Bruce,Карта сокровищ Брюса,Bruce'un Hazine Haritası,布鲁斯的藏宝图,布魯斯的藏寶圖,Mapa del tesoro de Bruce
-treasure_zztong,Quest,Challenge Info,,,Bruce's Treasure Map,,Bruces Schatzkarte,Mapa del tesoro de Bruce,La carte au trésor de Bruce,Mappa del tesoro di Bruce,ブルースの宝の地図,브루스의 보물 지도,Mapa skarbów Bruce'a,Mapa do Tesouro do Bruce,Карта сокровищ Брюса,Bruce'un Hazine Haritası,布鲁斯的藏宝图,布魯斯的藏寶圖,Mapa del tesoro de Bruce
-treasure_zztong_offer,Quest,Challenge Info,,,"I won't survive the night. I've managed to avoid the Zeds by staying away from cities and living in the wilderness. Alas, I fell off a cliff last night, broke my leg, and landed next to a bear. As I write this, the Zeds are responding to the sounds of my subsequent gunfire. This is a map to my closest stash. I hope it helps. -- Bruce",,"Ich werde die Nacht nicht überleben. Ich habe es geschafft, den Zeds auszuweichen, indem ich mich von Städten ferngehalten und in der Wildnis gelebt habe. Leider bin ich letzte Nacht von einer Klippe gestürzt, habe mir das Bein gebrochen und bin neben einem Bären gelandet. Während ich dies schreibe, reagieren die Zeds auf die Geräusche meiner nachfolgenden Schüsse. Dies ist eine Karte zu meinem nächsten Versteck. Ich hoffe, es hilft. - Bruce","Nox superstes ero. De civitatibus manendi, et in deserto habitando, vitare potui. Heu, heri scopulum cecidi, crus fregi, ac iuxta ursam apposui. Hoc ut scribo, Zeds soni gunfire subsequentis mei respondent. Haec tabula ad proximam LATESCO est. Spero me adiuvat. -- Bruce","Je ne survivrai pas la nuit. J'ai réussi à éviter les Zeds en restant loin des villes et en vivant dans le désert. Hélas, je suis tombé d'une falaise la nuit dernière, je me suis cassé la jambe et j'ai atterri à côté d'un ours. Au moment où j'écris ceci, les Zed réagissent aux sons de mes coups de feu ultérieurs. Ceci est une carte de ma réserve la plus proche. J'espère que cela aide. -- Bruce","Non sopravviverò alla notte. Sono riuscito a evitare gli Zed stando lontano dalle città e vivendo nella natura selvaggia. Ahimè, ieri sera sono caduto da un dirupo, mi sono rotto una gamba e sono atterrato accanto a un orso. Mentre scrivo, gli Zed stanno rispondendo ai suoni dei miei successivi colpi di arma da fuoco. Questa è una mappa della mia scorta più vicina. Spero possa essere d'aiuto. -- Bruce","私は夜を生き残ることはできません。私は都市から離れて荒野に住むことで、なんとかゼッズを避けることができました.悲しいかな、私は昨夜崖から落ちて足を骨折し、クマの隣に着陸しました.私がこれを書いているとき、Zeds は私のその後の発砲音に反応しています。これは私の最も近い隠し場所への地図です。お役に立てば幸いです。 -- ブルース","나는 밤을 살아남지 못할 것입니다. 나는 도시를 멀리하고 광야에서 살면서 Zeds를 피할 수 있었습니다. 아아, 어젯밤 절벽에서 떨어져 다리가 부러져 곰 옆에 떨어졌습니다. 내가 이 글을 쓰는 동안 Zeds는 내 후속 총격 소리에 반응하고 있습니다. 이것은 내 가장 가까운 은신처에 대한 지도입니다. 도움이 되길 바랍니다. -- 브루스","Nie przeżyję nocy. Udało mi się uniknąć Zetów, trzymając się z dala od miast i mieszkając w dziczy. Niestety, zeszłej nocy spadłem z klifu, złamałem nogę i wylądowałem obok niedźwiedzia. Kiedy to piszę, Zedy reagują na odgłosy moich późniejszych wystrzałów. To jest mapa do mojej najbliższej skrytki. Mam nadzieję, że to pomoże. -- Bruce'a","Eu não vou sobreviver à noite. Consegui evitar os Zeds ficando longe das cidades e vivendo no deserto. Infelizmente, caí de um penhasco ontem à noite, quebrei minha perna e caí ao lado de um urso. Enquanto escrevo isso, os Zeds estão respondendo aos sons do meu tiroteio subsequente. Este é um mapa para o meu esconderijo mais próximo. Espero que ajude. --Bruce","Я не переживу ночь. Мне удалось избежать Зедов, держась подальше от городов и живя в глуши. Увы, прошлой ночью я упал со скалы, сломал ногу и приземлился рядом с медведем. Пока я это пишу, Зеды реагируют на звуки моей следующей стрельбы. Это карта моего ближайшего тайника. Я надеюсь, что это помогает. -- Брюс","Geceden sağ çıkmayacağım. Şehirlerden uzak durarak ve vahşi doğada yaşayarak Zed'lerden kaçmayı başardım. Ne yazık ki, dün gece bir uçurumdan düştüm, bacağımı kırdım ve bir ayının yanına düştüm. Bunu yazarken, Zed'ler sonraki silah seslerime cevap veriyor. Bu benim en yakın zulamın haritası. Umut ediyorum bu yardım eder. -- Bruce","我活不过今晚。我通过远离城市和住在荒野中设法避开了 Zeds。唉，我昨晚掉下悬崖，摔断了腿，落在了一只熊旁边。在我写这篇文章时，Zed 正在响应我随后的枪声。这是我最近的藏匿处的地图。我希望它有所帮助。 -- 布鲁斯","我活不過今晚。我通過遠離城市和住在荒野中設法避開了 Zeds。唉，我昨晚掉下懸崖，摔斷了腿，落在了一隻熊旁邊。在我寫這篇文章時，Zed 正在響應我隨後的槍聲。這是我最近的藏匿處的地圖。我希望它有所幫助。 ——布魯斯","No sobreviviré la noche. Me las he arreglado para evitar a los Zeds alejándome de las ciudades y viviendo en la naturaleza. Por desgracia, me caí de un acantilado anoche, me rompí la pierna y aterricé junto a un oso. Mientras escribo esto, los Zed están respondiendo a los sonidos de mis disparos posteriores. Este es un mapa de mi escondite más cercano. Espero que ayude. --Bruce"
 trader_bobx,POI,POI,,x,Trader Bob,,,,,,,,,,,,,,
 trader_hughx,POI,POI,,x,Trader Bob,,,,,,,,,,,,,,
 trader_jenx,POI,POI,,x,Trader Bob,,,,,,,,,,,,,,
