@@ -1,30 +1,0 @@
-﻿<quests>
-	<!--<insertAfter xpath="/quests/quest[id='treasure_raphael']">-->
-    <append xpath="/quests">
-        <!-- **********************************************************
-            Imortalize Yourself With A Quest, LOL.
-        *********************************************************** -->
-        <quest id="treasure_zztong">
-            <property name="name_key" value="treasure_zztong"/>
-            <property name="subtitle_key" value="treasure_zztong"/>
-            <property name="description_key" value="treasure_zztong_offer"/>
-            <property name="icon" value="ui_game_symbol_map"/>
-            <property name="repeatable" value="true"/>
-            <property name="category_key" value="treasure"/>
-            <property name="offer_key" value="treasure_zztong_offer"/>
-            <property name="difficulty" value="medium"/>
-            <property name="shareable" value="false"/>
-            <objective type="TreasureChest">
-                <property name="block" value="cntBuriedLootStashChest"/>
-                <property name="alt_block" value="cntBuriedLootStashChestInsecure"/>
-                <property name="distance" value="500-1250"/>
-                <property name="default_radius" value="9"/>
-                <property name="nav_object" value="treasure"/>
-                <property name="direct_nav_object" value="treasure_direct"/>
-                <property name="blocks_per_reduction" value="10"/>
-                <property name="radius_reduction_sound" value="ui_radius_shrink"/>
-            </objective>
-        </quest>
-	<!--</insertAfter>-->
-    </append>
-</quests>
